# pyronear-mlops

./: .dvcignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/01_raw/: .gitignore  DS-71c1fd51-v2.dvc  wildfire.dvc
data/03_model_input/: .gitignore
data/04_models/yolo/: .gitignore
data/04_models/yolo-export/: .gitignore
data/04_models/yolo/baseline_full_dataset_wildfire/: args.yaml
data/04_models/yolov8/: .gitignore
pyro_train/data/: utils.py
pyro_train/git/: utils.py
pyronear_mlops/: utils.py
pyronear_mlops/git/: utils.py
pyronear_mlops/model/: utils.py
pyronear_mlops/model/yolo/: train.py  utils.py
pyronear_mlops/model/yolo/hyperparameters/: space.py  yolov10.py  yolov9.py
pyronear_mlops/model/yolov8/: hyperparameters.py  train.py  utils.py
pyronear_mlops/model/yolov8/configs/: baseline.yaml
scripts/: release.py
scripts/data/: download.sh
scripts/data/model_input/: build.py
scripts/model/yolo/: benchmark.py  build_manifest.py  export.py  hyperparameter_search.py  release.py  train.py
scripts/model/yolo/configs/: baseline.yaml  best.yaml
scripts/model/yolo/spaces/: default.yaml  narrow.yaml  wide.yaml
scripts/model/yolov10/: hyperparameter_search.py
scripts/model/yolov8/: benchmark.py  hyperparameter_search.py  train.py
scripts/model/yolov8/configs/: baseline.yaml  best.yaml
scripts/model/yolov9/: hyperparameter_search.py  train.py
scripts/model/yolov9/configs/: baseline.yaml  best.yaml
tests/pyro_train/model/yolo/: test_utils.py
(+2 files in other folders)
