[project]
name = "pyro-train"
version = "0.2.0"
description = "Machine Learning Training pipeline for Wildfire Detection 🔥"
authors = [{ name = "Arthur Caillau", email = "arthur@caillau.me" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "ultralytics==8.3.113",
    "torch>=2.2.2,<3",
    "torchvision>=0.17.2,<0.18",
    "pandas>=2.2.2,<3",
    "gdown>=5.1.0,<6",
    "python-dotenv>=1.0.1,<2",
    "pytest>=8.3.5,<9",
    "ncnn>=1.0.20250503",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "onnxslim>=0.1.53",
]

[dependency-groups]
dev = [
    "dvc>=3.50.0,<4",
    "mlflow>=2.12.1,<3",
    "ipython>=8.23.0,<9",
    "black>=24.4.0,<25",
    "isort>=5.13.2,<6",
    "mypy>=1.9.0,<2",
    "flake8>=7.0.0,<8",
    "dvc-s3>=3.2.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
